--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebaseui-angular": "^5.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
